[project]
name = "bmarxs"
version = "0.1.0"
description = "CLI tool to export and manage X/Twitter bookmarks"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "browser-cookie3>=0.20.1",
    "click>=8.3.1",
    "playwright>=1.57.0",
    "rich>=14.2.0",
]

[project.scripts]
bmarxs = "bmarxs.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bmarxs"]
